# groupD_UNIHAVEN

./: README.md  db.sqlite3
templates/: view_all.html
unihaven/: .pdm-python  db.sqlite3  pyproject.toml  schema.yml
unihaven-extension/: .coverage  README.md  manage.py  requirements.txt  schema.yaml
unihaven-extension/src/: db.sqlite3  urls.py  wsgi.py
unihaven-extension/src/apps/cuhk/: admin.py  (+7 more)
unihaven-extension/src/common/: forms.py  models.py  views.py
unihaven-extension/src/settings/: base.py  development.py  production.py
unihaven-extension/src/tests/: tests_api.py
unihaven/accommodation_system/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py  views2.py
unihaven/accommodation_system/migrations/: 0001_initial.py  0002_accommodation_area.py  0002_alter_cedarsspecialist_cedars_specialist_id_and_more.py  0002_alter_reservation_accommodation.py  0002_user_remove_accommodation_amenities_and_more.py  0003_remove_accommodation_distance.py  0003_remove_contract_id_contract_contract_id_and_more.py  0003_remove_reservation_status_remove_reservation_student_and_more.py  0004_rating_comment_rating_created_at_rating_photo_and_more.py  0005_rename_student_reservation_student_id.py  0006_rename_student_id_reservation_student.py  0007_student_student_id.py  0008_remove_student_user.py  0009_remove_notification_user_notification_student_and_more.py  0010_remove_reservation_reservation_id.py
unihaven/templates/: accommodations.html  base.html  role_selection.html  students.html  view_all.html
unihaven/unihaven/: settings.py  urls.py
(+50 files in other folders)
