[project]
name = "UniHaven"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "UNIHAVEN", email = "N/A"},
]
dependencies = ["django>=5.2", "django-filter>=25.1", "djangorestframework>=3.16.0", "drf-spectacular>=0.28.0", "requests>=2.32.3", "pillow>=11.2.1"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
